@@ -1,9 +1,1 @@
-{
-    "cSpell.words": [
-        "imagesdir",
-        "linkattrs",
-        "nondisruptive",
-        "ontap",
-        "transactionally"
-    ]
-}
+{}
