@@ -70,13 +70,13 @@ Una configurazione ad alta disponibilità dei dati viene mantenuta come segue:
 
 == Modelli di implementazione HA
 
-È possibile garantire l'elevata disponibilità dei dati implementando una configurazione ha in più zone di disponibilità (AZS) o in un singolo AZ. Per scegliere la configurazione più adatta alle proprie esigenze, è necessario esaminare ulteriori dettagli su ciascuna configurazione.
+Puoi garantire l'elevata disponibilità dei tuoi dati implementando una configurazione ha in più zone di disponibilità (AZ) o in una singola zona di disponibilità (AZ). Per scegliere la configurazione più adatta alle proprie esigenze, è necessario esaminare ulteriori dettagli su ciascuna configurazione.
 
 
 
-=== Zone di disponibilità multiple
+=== Più zone di disponibilità
 
-L'implementazione di una configurazione ha in zone di disponibilità multiple (AZS) garantisce un'elevata disponibilità dei dati in caso di guasto con un'istanza AZ o che esegue un nodo Cloud Volumes ONTAP. È necessario comprendere in che modo gli indirizzi IP NAS influiscono sull'accesso ai dati e sul failover dello storage.
+L'implementazione di una configurazione ha in più zone di disponibilità (AZ) garantisce un'elevata disponibilità dei dati in caso di errore con una AZ o un'istanza che esegue un nodo Cloud Volumes ONTAP. È necessario comprendere in che modo gli indirizzi IP NAS influiscono sull'accesso ai dati e sul failover dello storage.
 
 
 
@@ -86,7 +86,7 @@ Quando una configurazione ha viene distribuita in più zone di disponibilità, _
 
 Se non è possibile configurare un gateway di transito, gli indirizzi IP privati sono disponibili per i client NAS esterni al VPC. Tuttavia, questi indirizzi IP sono statici e non possono eseguire il failover tra i nodi.
 
-Prima di implementare una configurazione ha in più zone di disponibilità, è necessario esaminare i requisiti per gli indirizzi IP mobili e le tabelle di routing. È necessario specificare gli indirizzi IP mobili quando si implementa la configurazione. Gli indirizzi IP privati vengono creati automaticamente da BlueXP.
+Prima di distribuire una configurazione ha in più zone di disponibilità, è necessario esaminare i requisiti per gli indirizzi IP mobili e le tabelle di routing. È necessario specificare gli indirizzi IP mobili quando si implementa la configurazione. Gli indirizzi IP privati vengono creati automaticamente da BlueXP.
 
 Per ulteriori informazioni, vedere link:https://docs.netapp.com/us-en/bluexp-cloud-volumes-ontap/reference-networking-aws.html#requirements-for-ha-pairs-in-multiple-azs["Requisiti di rete AWS per Cloud Volumes ONTAP ha in più AZS"^].
 
@@ -123,7 +123,7 @@ Una volta che il nodo guasto torna in linea, rimontare i client sui volumi utili
 
 === Singola zona di disponibilità
 
-L'implementazione di una configurazione ha in una singola zona di disponibilità (AZ) può garantire un'elevata disponibilità dei dati in caso di guasto di un'istanza che esegue un nodo Cloud Volumes ONTAP. Tutti i dati sono accessibili in modo nativo dall'esterno del VPC.
+L'implementazione di una configurazione ha in una singola zona di disponibilità (AZ) può garantire l'elevata disponibilità dei dati in caso di guasto di un'istanza che esegue un nodo Cloud Volumes ONTAP. Tutti i dati sono accessibili in modo nativo dall'esterno del VPC.
 
 
 NOTE: BlueXP crea un https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/placement-groups.html["Gruppo di posizionamento AWS Spread"^] E lancia i due nodi ha in quel gruppo di posizionamento. Il gruppo di posizionamento riduce il rischio di guasti simultanei distribuendo le istanze su hardware sottostante distinto. Questa funzionalità migliora la ridondanza dal punto di vista del calcolo e non dal punto di vista del guasto del disco.
@@ -148,6 +148,51 @@ Per iSCSI, Cloud Volumes ONTAP utilizza MPIO (Multipath i/o) e ALUA (Asymmetric 
 NOTE: Per informazioni su quali configurazioni host specifiche supportano ALUA, consultare http://mysupport.netapp.com/matrix["Tool di matrice di interoperabilità NetApp"^] E la guida all'installazione e all'installazione delle utility host per il sistema operativo host.
 
 Per le configurazioni NAS, gli indirizzi IP dei dati possono migrare tra i nodi ha in caso di guasti. In questo modo si garantisce l'accesso del client allo storage.
+
+
+
+=== Zone locali di AWS
+
+Le zone locali di AWS sono un'implementazione dell'infrastruttura in cui storage, calcolo, database e altri servizi AWS selezionati sono situati vicino a grandi città e aree del settore. Con le zone locali di AWS è possibile avvicinare i servizi AWS per migliorare la latenza dei carichi di lavoro e gestire i database localmente.
+
+Puoi implementare una configurazione con AZ singolo o AZ multiplo in zone locali di AWS.
+
+
+
+==== Esempio di configurazioni della zona locale di AWS
+
+Di seguito sono riportate le configurazioni di esempio:
+
+* Singola zona di disponibilità: Entrambi i nodi del cluster e il mediatore si trovano nella stessa zona locale.
+* Più zone di disponibilità
+In più configurazioni di zone di disponibilità, esistono tre istanze, due nodi e un mediatore. Un'istanza delle tre istanze deve trovarsi in una zona separata. È possibile scegliere la modalità di configurazione.
++
+Di seguito sono riportati tre esempi di configurazioni:
+
++
+** Ogni nodo del cluster si trova in una zona locale diversa e il mediatore in una zona di disponibilità pubblica.
+** Un nodo cluster in una zona locale, il mediatore in una zona locale e il secondo nodo cluster si trovano in una zona di disponibilità.
+** Ciascun nodo del cluster e il mediatore si trovano in zone locali separate.
+
+
+
+
+
+
+==== Dischi e tipi di istanza supportati
+
+L'unico tipo di disco supportato è GP2.
+
+Sono attualmente supportate le seguenti famiglie di tipi di istanza EC2 con dimensioni da xlarge a 4XLarge:
+
+* M5
+* C5
+* C5d
+* R5
+* R5d
+
+
+link:https://aws.amazon.com/about-aws/global-infrastructure/localzones/features/?nc=sn&loc=2["Fai riferimento ad AWS per i dettagli più recenti e completi sui tipi di istanze EC2 supportati nelle zone locali"^].
 
 
 
